content/v2/useful-links.mdx
# Useful links

## Umami technology stack

- [React](https://reactjs.org/) - UI framework
- [Next.js](https://nextjs.org/) - React framework
- [Prisma.io](https://www.prisma.io/) - Modern database access toolkit
- [Chart.js](https://www.chartjs.org/) - Simple yet flexible JavaScript charting for designers & developers
- [Zustand](https://github.com/pmndrs/zustand) - Bear necessities for state management in React
- [React Hook Form](https://react-hook-form.com/) - Performant, flexible and extensible forms with easy-to-use validation
- [react-spring](https://www.react-spring.io/) - React animation library

## Integrations

- [Umami Analytics Plugin for VuePress](https://github.com/spekulatius/vuepress-plugin-umami)
- [Umami Analytics Plugin for VuePress v2](https://github.com/azat-io/azat-io/tree/main/plugins/umami-analytics)
- [Umami Analytics Plugin for Gatsby](https://www.gatsbyjs.com/plugins/gatsby-plugin-umami/)
- [Umami Analytics Module for Nuxt](https://github.com/ijkml/nuxt-umami)
- [Umami Plugin for Craft CMS](https://github.com/stenvdb/craft-umami)
- [Umami API for PHP Laravel](https://github.com/atm-code/laravel-umami)
- [Umami Plugin for Docusaurus](https://github.com/PatelN123/docusaurus-plugin-umami)
- [Umami Plugin for WordPress](https://wordpress.org/plugins/integrate-umami/)

## External articles

- [How I Wrote Umami in 30 days](https://medium.com/@caozilla/how-i-wrote-umami-in-30-days-a290372b80e4)
- [Self-hosted analytics with umami on Vercel](https://dev.to/vvo/self-hosted-analytics-with-umami-on-vercel-55ma)
- [Degoogling Your Analytics With Umami and Forge in 10 Minutes](https://releasecandidate.dev/degoogling-your-analytics-with-umami-and-forge-in-10-minutes)

## Server setup

### Web servers

- [How to install Nginx on Ubuntu 18.04](https://www.digitalocean.com/community/tutorials/how-to-install-nginx-on-ubuntu-18-04)
- [How to install Apache Web Server on Ubuntu 18.04](https://www.digitalocean.com/community/tutorials/how-to-install-the-apache-web-server-on-ubuntu-18-04)
- [Understanding Nginx HTTP Proxying, Load Balancing, Buffering, and Caching](https://www.digitalocean.com/community/tutorials/understanding-nginx-http-proxying-load-balancing-buffering-and-caching)

### Databases

- [How to install Postgresql on Ubuntu 18.04](https://www.digitalocean.com/community/tutorials/how-to-install-and-use-postgresql-on-ubuntu-18-04)
- [How to install MySQL on Ubuntu 18.04](https://www.digitalocean.com/community/tutorials/how-to-install-mysql-on-ubuntu-18-04)
